--- a/stock-service/src/main/resources/application.properties
+++ b/stock-service/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/stockdb
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+hibernate.generate_statistics=true
