--- a/email-service/src/main/resources/application.properties
+++ b/email-service/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.kafka.topic.name=order_topics
 # email
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=quocbao642002@gmail.com
-spring.mail.password=drsamwkpmwbsliut
+spring.mail.username=<replace your email>
+spring.mail.password=<replace your password>
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
